added child product on pdp page

--- a/commerce-module/app/code/OMS/ReactComponent/view/frontend/templates/deliveryinfo.phtml
+++ b/commerce-module/app/code/OMS/ReactComponent/view/frontend/templates/deliveryinfo.phtml
@@ -5,10 +5,11 @@
  * @copyright Copyright (c) 2022 IBM Inc.
  */
 ?>
+<div id="react-component-wrapper">
 <div id="root-pdp-react-delivery-time"></div>
 <div id="root-pdp-react-selectsource"></div>
 <div id="root-pdp-react-select-delivery-method"></div>
-
+</div>
 <script type="text/javascript">
     require(['jquery', 'OMS_Appbuilder/js/setshippingrate-checkout'], function ($, setShippingRateCheckout) {
 
